all sensors services added and implemented (not properly yet), webrtc implementation in progress, app in working phase except photo upload, webrtc calling, added welcome,sos sounds
